src/resources/gateway/kustomize/istio-api/gateway.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "Gateway"
metadata:
  name: "istio-ingress"
  namespace: "istio-ingress"
spec:
  selector:
    istio: "ingress"
...
