src/resources/gateway/kustomize/istio-api/virtual-service-httpbin.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "httpbin"
  namespace: "istio-ingress"
spec:
  gateways:
    - "istio-ingress/istio-ingress"
  http:
    - name: "httpbin"
      match:
        - uri:
            prefix: "/status"
        - uri:
            prefix: "/delay"
      route:
        - destination:
            host: "httpbin.httpbin.svc.cluster.local"
            port:
              number: 8000
...
